tests/compile_fail/enum/generics_missing_default.stderr
error[E0277]: the trait bound `T: Default` is not satisfied
 --> tests/compile_fail/enum/generics_missing_default.rs:8:13
  |
8 |     Variant(T)
  |             ^ the trait `Default` is not implemented for `T`
  |
help: consider restricting type parameter `T`
  |
6 | enum Enum<T: std::default::Default> {
  |            +++++++++++++++++++++++

error[E0277]: the trait bound `T: Default` is not satisfied
  --> tests/compile_fail/enum/generics_missing_default.rs:15:16
   |
15 |         field: T
   |                ^ the trait `Default` is not implemented for `T`
   |
help: consider restricting type parameter `T`
   |
12 | enum Enum2<T: std::default::Default> {
   |             +++++++++++++++++++++++
